- Setting unit property 'auto complete' triggers ajax event for immediately popping up completion info block
- Fixed error in api2.php file that caused newly created users' passwords to be encoded twice 
- Fixed error in activation email code sent out when new users are registering and "email activation" is set

=== Version 3.6.5 build 8086 ===
- Fixed some course settings not being available to professors
- Scorm content completion update
- Supervisor access to employees of subbranches fix
- Fixed payments tab being visible to supervisor's users even when globally disabled
- Fixed issue in lesson reports not being visible under certain conditions
- Fixed bypassing cart not working when license note is enabled
- Fixed ###timestamp### template not being parsed in notifications
- Added toggle html mode in notifications editor
- Supervisor can no longer archive users
- Training record (user form) print preview fix
- Supervisors no longer access inactive unattached users

=== Version 3.6.5 build 8007 ===
- Provides RSS feeds through the RSS module
- Added api2.php for version 2.0 of eFront XML API
- Added cart disable functionality, to allow for single click enrolling to free lessons and courses
- Added ability to switch between display modes(iframe, popup) in editing scorm units
- Added 'course options' in custom user type creation for professor types
- Added file permissions checking and setting functionality
- Added code for hiding organization section for custom user types in enterprise edition
- Added propagation handle to branch courses
- Added tooltip with organization information in employees list
- Added headers in order to eliminate browser cache in sidebar
- Added icon for deleting project completion info(grade, commnent, file) by professor
- Added option to purge events size in maintenance -> cleanup
- Replaced flash charts with flotr JS-based graphs
- Supervisor can directly edit supervised branches