@@ -1,1 +1,7 @@
 <?php
+
+  //This file cannot be called directly, only included.
+  if (str_replace(DIRECTORY_SEPARATOR, "/", __FILE__) == $_SERVER['SCRIPT_FILENAME']) {
+   exit;
+  }
+?>
